@@ -7,6 +7,7 @@ Current:
     power maxima uses.
   * Autocompletion now suggests the names of built-in packages for load(), batch()
     and batchload().
+  * Autocompletion now suggests the names of built-in demos for demo().
   * wxMaxima can now handle requests to display raw lisp elements.
   * A drop-down box for changing cell styles
   * If an input cell is hidden and has no output it now is no more displayed
